[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "comports"
description = "A small GUI for launching PuTTY for COM ports"
requires-python = ">=3"
license = {file = "LICENSE"}
dependencies=["pyserial"]
keywords=["PuTTY", "COM", "serial", "GUI"]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

[[project.authors]]
name = "Zeev Rotshtein"
email = "zeevro@gmail.com"

[project.urls]
Source = "https://github.com/zeevro/comports"

[project.gui-scripts]
comports = "comports.gui:main"

[tool.hatch.version]
source = "vcs"
